test/domains/compilerErrors/notsupportedMakeBuffer-DR.chpl
use notsupportedCommon;

dfltRectangularBase.makeIndexBuffer(5);
