test/domains/compilerErrors/notsupportedMakeBuffer-DR.good
notsupportedMakeBuffer-DR.chpl:3: error: this domain type does not support 'makeIndexBuffer'
